2001-10-31  jacob berkman  <jacob@ximian.com>

	* gdk/gdkselection.h (GDK_TARGET_STRING): 
	(GDK_SELECTION_TYPE_STRING): these should be 31, not 3.  Hooray
	for Xatoms (and not using the XA_* macros)!

Wed Oct 31 15:38:14 2001  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkwindow.[ch] (gtk_window_get_focus): Add a
	gtk_window_get_focus() getter to determine the currently
	focused widget within the window. (#63145, request
	from Damian Ivereigh)

Wed Oct 31 14:45:08 2001  Jonathan Blandford  <jrb@redhat.com>

	* gtk/gtkenums.h (enum): Add GTK_SELECTION_NONE enum, #61695

	* gtk/gtktreeselection.c (gtk_tree_selection_set_mode): Handle new
	GTK_SELECTION_NONE enum.
	(_gtk_tree_selection_internal_select_node): ditto

	* gtk/gtkcellrenderer.h (struct _GtkCellRendererClass): add
	constness.

	* gtk/gtkcellrenderertoggle.c: more yummy constness.

	* gtk/gtkclist.c (gtk_clist_set_selection_mode): g_return_if_fail
	if mode == GTK_SELECTION_NONE

Wed Oct 31 14:05:17 2001  Jonathan Blandford  <jrb@redhat.com>

	* gtk/gtktreeview.c (gtk_tree_view_class_init): Added a
	"cursor_changed" signal, #62850.

2001-10-31  Matt Wilson  <msw@redhat.com>

	* gtk/gtktreedatalist.c (_gtk_tree_data_list_alloc): after
	allocating the treedatalist, zero it to make sure the values are
	cleared from any garbage that was in this chunk.

2001-10-31  Murray Cumming  <murrayc@usa.net>

	* gtk/cellrenderertext.h: "edited" default signal handler
	gchar* args are now const.
	gtk/cellrenderertoggle.h: "toggled" default signal handler
	gchar* arg is now const.
	Also changed other signal handlers for "edited" and "toggled" to
	have the same signature.

Tue Oct 30 19:17:57 2001  Jonathan Blandford  <jrb@redhat.com>

	* gtk/gtktreemodelsort.c (gtk_tree_model_sort_sort_level): massize
	rewrite.  Static models now totally work.  I'm not 100% sure about
	row_inserted and row_changed, but I'll get those later.

2001-10-30  Sven Neumann  <sven@gimp.org>
