@@ -1278,9 +1278,9 @@ gtk_list_store_drag_data_get (GtkTreeDragSource *drag_source,
    * default handler.
    */
 
-  if (gtk_selection_data_set_tree_row (selection_data,
-                                       GTK_TREE_MODEL (drag_source),
-                                       path))
+  if (gtk_tree_set_row_drag_data (selection_data,
+				  GTK_TREE_MODEL (drag_source),
+				  path))
     {
       return TRUE;
     }
@@ -1308,9 +1308,9 @@ gtk_list_store_drag_data_received (GtkTreeDragDest   *drag_dest,
   tree_model = GTK_TREE_MODEL (drag_dest);
   list_store = GTK_LIST_STORE (drag_dest);
 
-  if (gtk_selection_data_get_tree_row (selection_data,
-                                       &src_model,
-                                       &src_path) &&
+  if (gtk_tree_get_row_drag_data (selection_data,
+				  &src_model,
+				  &src_path) &&
       src_model == tree_model)
     {
       /* Copy the given row to a new position */
