@@ -91,25 +91,28 @@ GType           gtk_tree_drag_dest_get_type   (void) G_GNUC_CONST;
 /* Inserts a row before dest which contains data in selection_data,
  * or returns FALSE if it can't
  */
-gboolean gtk_tree_drag_dest_drag_data_received (GtkTreeDragDest  *drag_dest,
-                                                GtkTreePath      *dest,
-                                                GtkSelectionData *selection_data);
+gboolean gtk_tree_drag_dest_drag_data_received (GtkTreeDragDest   *drag_dest,
+						GtkTreePath       *dest,
+						GtkSelectionData  *selection_data);
+
 
 /* Returns TRUE if we can drop before path; path may not exist. */
-gboolean gtk_tree_drag_dest_row_drop_possible  (GtkTreeDragDest  *drag_dest,
-                                                GtkTreeModel     *src_model,
-                                                GtkTreePath      *src_path,
-                                                GtkTreePath      *dest_path);
+gboolean gtk_tree_drag_dest_row_drop_possible  (GtkTreeDragDest   *drag_dest,
+						GtkTreeModel      *src_model,
+						GtkTreePath       *src_path,
+						GtkTreePath       *dest_path);
+
 
 /* The selection data would normally have target type GTK_TREE_MODEL_ROW in this
  * case. If the target is wrong these functions return FALSE.
  */
-gboolean gtk_selection_data_set_tree_row     (GtkSelectionData         *selection_data,
-                                              GtkTreeModel             *tree_model,
-                                              GtkTreePath              *path);
-gboolean gtk_selection_data_get_tree_row     (GtkSelectionData         *selection_data,
-                                              GtkTreeModel           **tree_model,
-                                              GtkTreePath             **path);
+gboolean gtk_tree_set_row_drag_data            (GtkSelectionData  *selection_data,
+						GtkTreeModel      *tree_model,
+						GtkTreePath       *path);
+gboolean gtk_tree_get_row_drag_data            (GtkSelectionData  *selection_data,
+						GtkTreeModel     **tree_model,
+						GtkTreePath      **path);
+
 
 #ifdef __cplusplus
 }
